  interface can be set in the same statement.

  use Exception::Base 'Exception::WithDefaultValue' =>
    'has' => 'value',
    'value' => 'Default value',
  };

Changes:

* The "with" and "try" methods return empty string instead "0" as false
  value.

* Removed private methods "__stringify" and "__numerify". The methods
  "stringify" and "numerify" overloads "q{""}" and "0+" operators.

* Updated bundled Test::Unit::Lite to 0.10.

------------------------------------------------------------------------
0.1702 | Piotr Roszatycki <dexter@debian.org> | 2008-05-28

Fixed:

* Fix some "undefined value" warning.

------------------------------------------------------------------------
0.1701 | Piotr Roszatycki <dexter@debian.org> | 2008-05-12

* Corrected documentation.

------------------------------------------------------------------------
0.17 | Piotr Roszatycki <dexter@debian.org> | 2008-05-11

Incompatibilities:

* The "catch" method doesn't rethrow a caught exception.  The reference to
  array is no longer an argument for the method.  The class name means that
  caught non-exception will be converted to this class.

New:

* The "with" method supports "-isa" and "-has" keyword. Value can be a    
  reference to array which means any value matches.

Changes:

* Show full propagated stack for verbosity = 4.
* The "with" method matches the default_attribute if one argument is given.

------------------------------------------------------------------------
0.16 | Piotr Roszatycki <dexter@debian.org> | 2008-05-07

Incompatibilites:

* The FIELD constant was renamed to ATTRS as far as every OO language calls it
  attributes.  All derived classes should use ATTRS constant instead of FIELD
  constant.
* An unknown attribute will be ignored instead to be part of properties
  attribute.  You can create additional exception class which supports these
  attributes.
* Removed eval_error attribute.  If the error stack is empty, the catch method